feat: audio_data is a stream now, directly sent to blob storage. No intermediate .wav file on the system that runs the scripts.

--- a/cognitive_speech/html_fail.html
+++ b/cognitive_speech/html_fail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PDF to TTS</title>
+    <title>PDF to Speech</title>
     <style>
         ul {
             list-style: none;
@@ -31,8 +31,10 @@
 
     <form style="margin: 20px;">
         <label for="keyword" style="font-size: 16px; margin-right: 10px;">Enter a keyword related to the architectural style or its name:</label>
+        <input type="hidden" name="code" value="{FUNC_CODE}">
         <input type="text" id="keyword" name="keyword" style="font-size: 16px; padding: 5px;">
         <input type="submit" value="Submit" style="font-size: 16px; padding: 5px 10px; background-color: #0074c2; color: #fff; border: none; border-radius: 5px; cursor: pointer;">
     </form>
+
 </body>
 </html>
