--- a/cognitive_speech/html_initial.html
+++ b/cognitive_speech/html_initial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PDF to TTS</title>
+    <title>PDF to Speech</title>
 
     <style>
         ul {
@@ -20,6 +20,7 @@
 
 </head>
 <body style="font-family: Arial, sans-serif; text-align: center;">
+
     <h1 style="font-size: 24px; margin: 20px;">Welcome to the Architecture Search Index</h1>
 
     <h2 style="font-size: 18px; margin: 10px"> Information is available about: </h2>
@@ -32,8 +33,10 @@
 
     <form style="margin: 20px;">
         <label for="keyword" style="font-size: 16px; margin-right: 10px;">Enter a keyword related to the architectural style or its name:</label>
+        <input type="hidden" name="code" value="{FUNC_CODE}">
         <input type="text" id="keyword" name="keyword" style="font-size: 16px; padding: 5px;">
         <input type="submit" value="Submit" style="font-size: 16px; padding: 5px 10px; background-color: #0074c2; color: #fff; border: none; border-radius: 5px; cursor: pointer;">
     </form>
+
 </body>
 </html>
